# mocho

./: README.md
dataset/: .gitignore  README.md  links.txt
model/tokenizer/: README.md  tokenizer.json
model/weights/: .gitignore
train/: 000_update_tokenizer.py  001_tokenize.py  001_train_weights.py  002_tokenize.py  003_train_weight_torch.py  020_fix_tokenizer.py  020_tokenize_wikipedia.py  021_tokenize_mozc.py  021_tokenize_mozc.py.save  030_test_dataset.py  030_test_dataset_wikipedia.py  031_test_dataset_mozc.py  035_convert_compiled_pth_to_safetensors.py  040_train_weight.py  040_train_weight_mozc.py  041_train_weight_wikipedia.py  042_train_weight_wikipedia2.py  043_train_mixed.py  050_model_test.py  060_convert_to_onnx.py  065_onnx_pre_test.py  070_onnx_test.py  README.md  fix_tokenizer.py  mocho.py  mocho_for_onnx_export.py  model_test_torch.py  old_train_pytorch.py  pyproject.toml  rewrite.py  test_dataset.py  train_pytorch.py
