[project]
name = "mocho-train"
version = "0.0.0"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
    "tinygrad",
    "tokenizers>=0.22.2",
    "torch>=2.11.0.dev20260112",
]

[tool.uv]
prerelease = "allow"
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-nightly-rocm"
url = "https://download.pytorch.org/whl/nightly/rocm7.1"
#explicit = true

[tool.uv.sources]
torch = { index = "pytorch-nightly-rocm" }
tinygrad = { git = "https://github.com/tinygrad/tinygrad.git" }
